--- a/ai-score/index.html
+++ b/ai-score/index.html
@@ -24,7 +24,8 @@
 </head>
 
 <body>
-    Please score answer of model using this buttons and then send me results<br />
+    <h3>⚠️ Data is stored locally and don't send automatically, please send me report when finished ⚠️</h3>
+    Please score answer of model using this buttons<br />
     <button onclick="score('ok')">🟢 OK (O)</button>
     <button onclick="score('trash')">🔴 Trash (T)</button>
     <button onclick="score('skip')">⏭ Skip (S)</button>
